...
import UIKit

class FeedsListLoadingState: GKState {
  private var withAnimations: Bool
  private weak var viewController: FeedsListViewController!
  private weak var refreshControl: UIRefreshControl!
  private let loadingIndicator: UIAlertController

  override func didEnter(from previousState: GKState?) {
    // As we don't want to show two loading indicators at once.
    if !refreshControl.isRefreshing {
      viewController.present(loadingIndicator, animated: withAnimations)
    }
...
